Fix dom/ranges/Range-compareBoundaryPoints.html on ARM

The how parameter is defined as unsigned short in WebIDL. The
generated bindings end up calling ToSmallerUInt in V8BindingForCore.cpp.
The final cast in this method seems to hit an ARM specific issue [1].
To fix this static cast to int64_t before static casting to the unsigned type.

[1] http://www.embeddeduse.com/2013/08/25/casting-a-negative-float-to-an-unsigned-int/

Bug: 823812

Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I90c733185b8325984e004224dd72176840d1794e
Reviewed-on: https://chromium-review.googlesource.com/970901
Reviewed-by: Jeremy Roman <jbroman@chromium.org>
Reviewed-by: Robert Ma <robertma@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Rob Buis <rob.buis@samsung.com>
Cr-Commit-Position: refs/heads/master@{#545078}